tests/base/invalid/RealAdd_CompileFail_1.whiley
import * from whiley.lang.*

int f(int x):
    return x

void ::main(System sys,[string] args):
    x = 1
    x = f(x + 2.3)
